# colgandev

./: .aider.conf.yml  .gitignore  CONVENTIONS.md  LICENSE  README.md  SYSTEM.md  generate_site.py  html_components.py  justfile  main.py  pyproject.toml  resolve.py
bspwm/: bspwmrc
chrome_plugin/: background.js  manifest.json  newtab.html  newtab.js
cinnamon/: README.md  org.gnome.gnome-screenshot.conf
colgandev/: api.py  cli.py  components.py  ctx.py
colgandev/actions/: commit_git.py  generate_site.py  resolve.py
colgandev/html/: html_components.py  render_markdown.py
contexts/: example-auth.md
ctx/: aider-config.md
ctx/help/: aider.txt
dotfiles/alacritty/: alacritty.toml
dotfiles/cinnamon/: org.cinnamon.desktop.keybindings.conf  org.cinnamon.desktop.wm.preferences.conf  org.gnome.libgnomekbd.keyboard.conf
dotfiles/nvim/: init.lua
home/: bashrc  gitconfig
nvim/: init.lua  lazy-lock.json
prompts/: bash-script.md
scripts/: generate_site.py  prompt_aider.py  prompt_aider.sh  refresh.sh  run_context.py
sxhkd/: sxhkdrc
tests/: test_colgandev.py
