[project]
name = "colgandev"
authors = [{ name = "David Colgan", email = "david@colgan.dev" }]
version = "0.1.0"
description = "The dotfiles and development tooling for Colgan Development"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.54.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.2.1",
    "djlint>=1.36.4",
    "factory-boy>=3.3.3",
    "fastapi>=0.115.13",
    "markdown>=3.8",
    "pillow>=11.2.1",
    "pytest>=8.4.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "ruff>=0.12.0",
    "uvicorn>=0.34.3",
    "uvloop>=0.21.0",
]


[tool.djlint]
max_blank_lines = 1
max_attribute_length = 1
line_break_after_multiline_tag = true
close_void_tags = true
format_css = true
profile = "jinja"
custom_blocks = "partialdef"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "S", "INT"]


[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"
addopts = "--pythonwarnings error --showlocals -s"
pythonpath = ["colgandev"]
testpaths = ["tests"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project.scripts]
cld = "colgandev.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["colgandev"]
